--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,17 @@
 {
-  "name": "vuestrap-icons",
-  "homepage": "https://github.com/kzima/vuestrap-icons",
+  "name": "vuestrap-docs",
+  "homepage": "https://github.com/kzima/vuestrap-docs",
   "authors": [
     "kzima <kris@mosquito.ie>"
   ],
-  "description": "Vuestrap Icons Component complements Bootstrap 4 with svg icons.",
+  "description": "Vuestrap Docs Components are useed in docs pages to showcase web components.",
   "main": [
-    "dist/vuestrap-icons.js",
-    "dist/vuestrap-icons.js.map",
-    "dist/vuestrap-icons.min.js",
-    "dist/vuestrap-icons.css",
-    "dist/vuestrap-icons.css.map",
-    "dist/vuestrap-icons.min.css"
+    "dist/vuestrap-docs.js",
+    "dist/vuestrap-docs.js.map",
+    "dist/vuestrap-docs.min.js",
+    "dist/vuestrap-docs.css",
+    "dist/vuestrap-docs.css.map",
+    "dist/vuestrap-docs.min.css"
   ],
   "moduleType": [
     "amd",
@@ -25,9 +25,6 @@
   ],
   "license": "MIT",
   "ignore": [
-    "assets/*",
-    "!assets/icons.min.svg",
-    "!assets/icons.svg",
     "node_modules",
     "bower_components",
     "docs",
