make utils accessible from outside component

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuestrap-docs",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Vuestrap Docs Components are useed in docs pages to showcase web components.",
   "library": "vuestrapDocs",
   "repository": {
@@ -26,6 +26,10 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kzima/vuestrap-docs/issues"
+  },
+  "peerDependencies": {
+    "director": "^1.2.8",
+    "vue": "^1.0.10"
   },
   "dependencies": {
     "vue": "^1.0.10"
