--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuestrap-docs",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "Vuestrap Docs Components are useed in docs pages to showcase web components.",
   "library": "vuestrapDocs",
   "repository": {
@@ -8,9 +8,13 @@
     "url": "git+https://github.com/kzima/vuestrap-docs.git"
   },
   "scripts": {
-    "dev": "webpack -w --colors --progress --config webpack.build.js --env dev",
-    "dist": "webpack --colors --progress --config  webpack.build.js --env docs && webpack --colors --progress --config webpack.build.js --env dev && webpack --colors --progress --config webpack.build.js --env dist",
-    "docs": "webpack-dev-server --inline --hot --quiet --config webpack.build.js --env docs"
+    "build": "npm run docs && npm run dev && npm run dev-bundle && npm run dist && npm run dist-bundle",
+    "dist": "webpack --colors --progress --config webpack.build.js --env production",
+    "dist-bundle": "webpack --colors --progress --config webpack.build.js --env production --bundle true",
+    "dev": "webpack --colors --progress --config webpack.build.js --env development",
+    "dev-bundle": "webpack --colors --progress --config webpack.build.js --env development --bundle true",
+    "docs": "webpack --colors --progress --config  webpack.build.js --env docs",
+    "serve-docs": "webpack-dev-server --port 8083 --inline --hot --quiet --config webpack.build.js --env docs"
   },
   "keywords": [
     "Bootstrap4",
@@ -27,12 +31,8 @@
   "bugs": {
     "url": "https://github.com/kzima/vuestrap-docs/issues"
   },
-  "peerDependencies": {
-    "director": "^1.2.8",
-    "vue": "^1.0.10"
-  },
   "dependencies": {
-    "vue": "^1.0.10"
+    "vue": "^1.0.16"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
@@ -43,6 +43,7 @@
     "director": "^1.2.8",
     "event-stream": "^3.3.2",
     "extract-text-webpack-plugin": "^0.8.2",
+    "gritcode-components": "^0.3.5",
     "highlightjs-loader": "^0.2.3",
     "html-loader": "^0.3.0",
     "json-loader": "^0.5.4",
@@ -50,7 +51,7 @@
     "optimist": "^0.6.1",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
-    "vuestrap": "^1.0.0",
+    "vuestrap": "^1.0.1",
     "vuestrap-theme-loader": "^0.1.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.12.1"
