--- a/package.json
+++ b/package.json
@@ -1,39 +1,17 @@
 {
-  "name": "vuestrap-docs",
-  "version": "0.5.0",
-  "description": "Vuestrap Docs Components are useed in docs pages to showcase web components.",
-  "library": "vuestrapDocs",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kzima/vuestrap-docs.git"
-  },
-  "scripts": {
-    "build": "npm run docs && npm run dev && npm run dev-bundle && npm run dist && npm run dist-bundle",
-    "dist": "webpack --colors --progress --config webpack.build.js --env production",
-    "dist-bundle": "webpack --colors --progress --config webpack.build.js --env production --bundle true",
-    "dev": "webpack --colors --progress --config webpack.build.js --env development",
-    "dev-bundle": "webpack --colors --progress --config webpack.build.js --env development --bundle true",
-    "docs": "webpack --colors --progress --config  webpack.build.js --env docs",
-    "serve-docs": "webpack-dev-server --port 8083 --inline --hot --quiet --config webpack.build.js --env docs"
-  },
-  "keywords": [
-    "Bootstrap4",
-    "Web",
-    "Components",
-    "Polymer"
-  ],
+  "version": "0.5.1", 
   "author": {
-    "name": "Kris Zima",
     "email": "kris@mosquito.ie",
+    "name": "Kris Zima",
     "url": "https://github.com/kzima"
   },
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/kzima/vuestrap-docs/issues"
   },
   "dependencies": {
     "vue": "^1.0.16"
   },
+  "description": "Vuestrap Docs Components are useed in docs pages to showcase web components.",
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^5.8.33",
@@ -56,5 +34,42 @@
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.12.1"
   },
-  "homepage": "https://github.com/kzima/vuestrap-docs#readme"
+  "directories": {},
+  "dist": {
+    "shasum": "0af34235c1baab8e760bc5554b9bcc372d8f44c2",
+    "tarball": "http://registry.npmjs.org/vuestrap-docs/-/vuestrap-docs-0.5.0.tgz"
+  },
+  "gitHead": "f5bbffea8d41b1a7db4d49130ffdab9649761369",
+  "homepage": "https://github.com/kzima/vuestrap-docs#readme",
+  "keywords": [
+    "Bootstrap4",
+    "Components",
+    "Polymer",
+    "Web"
+  ],
+  "library": "vuestrapDocs",
+  "license": "MIT",
+  "maintainers": [
+    {
+      "name": "kzima",
+      "email": "kris@mosquito.ie"
+    }
+  ],
+  "name": "vuestrap-docs",
+  "optionalDependencies": {},
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kzima/vuestrap-docs.git"
+  },
+  "scripts": {
+    "build": "npm run docs && npm run dev &&  npm run dist && npm run dev-bundle && npm run dist-bundle && npm run vuestrap",
+    "vuestrap": "webpack --colors --progress --config webpack.build.js --env development --vuestrap true && webpack --colors --progress --config webpack.build.js --env production --vuestrap true",
+    "dev": "webpack --colors --progress --config webpack.build.js --env development",
+    "dev-bundle": "webpack --colors --progress --config webpack.build.js --env development --bundle true",
+    "dist": "webpack --colors --progress --config webpack.build.js --env production",
+    "dist-bundle": "webpack --colors --progress --config webpack.build.js --env production --bundle true",
+    "docs": "webpack --colors --progress --config  webpack.build.js --env docs",
+    "serve-docs": "webpack-dev-server --port 8083 --inline --hot --quiet --config webpack.build.js --env docs"
+  }
 }
